--- a/wasipage.html
+++ b/wasipage.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DAVID_CYRIL</title>
+  <title>ROMEO BW II
+</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
